# checkmk

agents/wnx/: CMakeLists.txt
agents/wnx/doc/: FILEMONITOR_ANALYSIS.md  FILEMONITOR_IMPLEMENTATION.md  file_monitor.md
agents/wnx/doc/analysis/: 01_INITIAL_SYSTEM_ANALYSIS.md  02_PROVIDER_SYSTEM_ANALYSIS.md  03_CONFIGURATION_SYSTEM_ANALYSIS.md  04_NOTIFICATION_SYSTEM_ANALYSIS.md  05_TESTING_SYSTEM_ANALYSIS.md  06_IMPLEMENTATION_DECISIONS.md
agents/wnx/doc/instructions/: 01_COMPILATION_GUIDE.md  02_INSTALLATION_GUIDE.md  03_USAGE_EXAMPLES.md  04_TROUBLESHOOTING_GUIDE.md  05_CONFIGURATION_PARAMETERS.md  06_STEP_BY_STEP_COMPILATION.md  07_VM_SETUP_AND_TESTING.md  08_COMPLETE_SETUP_GUIDE.md  09_TEST_ENVIRONMENT_SETUP.md  istruzioni.md
agents/wnx/include/providers/: file_monitor.h
agents/wnx/src/engine/: stdafx.cpp  stdafx.h
agents/wnx/src/engine/providers/: CMakeLists.txt  file_monitor.cpp  file_monitor.h
agents/wnx/test/unit/: CMakeLists.txt
agents/wnx/test/unit/providers/: test_file_monitor.cpp
agents/wnx/test_files/config/: check_mk_dev_file_monitor.yml  check_mk_dev_file_monitor_config.yml  check_mk_dev_file_monitor_example.yml  check_mk_dev_file_monitor_test.yml
